--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,500;1,700&family=Space+Grotesk:wght@500;700">
-  <link rel="stylesheet" type="text/css" href="index.css">
-  <script src="index.js"></script>
-  <link rel="icon" type="image/x-icon" href="Secondary_Logo.png">
+  <link rel="stylesheet" type="text/css" href="./index.css">
+  <script src="./index.js"></script>
+  <link rel="icon" type="image/x-icon" href="./Secondary_Logo.png">
 </head>
   <title>The Aerospace Manual</title>
   <body>
