--- a/index.html
+++ b/index.html
@@ -17,9 +17,31 @@
 </head>
   <title>The Aerospace Manual</title>
   <body>
+
+    <div id="myNav" class="overlay">
+      <a class="closebtn" onclick="closeNav()">&times;</a>
+      <div class="overlay-container">
+        <div class="overlay-column">
+          <div class="overlay-content">
+            <a onclick="setUnderline(this); aerospace_history()" id="Aerospace History">Aerospace History<i class="arrow_right"></i></a>
+            <a onclick="setUnderline(this); theory()">Theory<i class="arrow_right"></i></a>
+            <a onclick="setUnderline(this); rocket_components()">Rocket Components<i class="arrow_right"></i></a>
+            <a onclick="setUnderline(this); engineering_roles()">Aerospace Engineering Roles<i class="arrow_right"></i></a>
+            <a href="#" onclick="setUnderline(this); clearNav()">Company Map</a>
+            <a href="#" onclick="setUnderline(this); clearNav()">Unit Conversions</a>
+            <a href="#" onclick="setUnderline(this); clearNav()">Forum</a>
+          </div>
+        </div>
+        <div id="overlay-column-2" class="overlay-column-2">
+        </div>
+        <div id="overlay-column-3" class="overlay-column-3">
+        </div>
+      </div>
+    </div>
+
     <div class="container">
         <nav class="navbar">
-          <button class="nav_bar_button">
+          <button onclick="openNav()" class="nav_bar_button">
               <div></div>
               <div></div>
               <div></div>
