--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <a onclick="setUnderline(this); theory()">Theory<i class="arrow_right"></i></a>
             <a onclick="setUnderline(this); rocket_components()">Rocket Components<i class="arrow_right"></i></a>
             <a onclick="setUnderline(this); engineering_roles()">Aerospace Engineering Roles<i class="arrow_right"></i></a>
-            <a href="#" onclick="setUnderline(this); clearNav()">Company Map</a>
-            <a href="#" onclick="setUnderline(this); clearNav()">Unit Conversions</a>
-            <a href="#" onclick="setUnderline(this); clearNav()">Forum</a>
+            <a href="#" onclick="setUnderline(this); closeNav()">Company Map</a>
+            <a href="#" onclick="setUnderline(this); closeNav()">Unit Conversions</a>
+            <a href="#" onclick="setUnderline(this); closeNav()">Forum</a>
           </div>
         </div>
         <div id="overlay-column-2" class="overlay-column-2">
