--- a/article_template.html
+++ b/article_template.html
@@ -11,8 +11,10 @@
     gtag('config', 'G-4BE32D9YSF');
   </script>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,500;1,700&family=Space+Grotesk:wght@500;700">
+  <link rel="stylesheet" type="text/css" href="./nav-bar.css">
+  <link rel="stylesheet" type="text/css" href="./basic-info.css">
   <link rel="stylesheet" type="text/css" href="./article_template.css">
-  <script src="./article_template.js"></script>
+  <script src="./nav-bar.js"></script>
   <link rel="icon" type="image/x-icon" href="./Secondary_Logo.png">
 </head>
   <title>Article Title - The Aerospace Manual</title>
