--- a/rocket-components/rocket-engines.html
+++ b/rocket-components/rocket-engines.html
@@ -100,7 +100,7 @@
             <div class="flex_author">
               <div class="author_name_group">
                 <h3 style="padding-bottom: 5px;">Author Name</h3>
-                <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../Authors/Socials/LinkedIn.png" alt="LinkedIn Logo" class="logo_image"></a>
+                <a href="#" target="_blank"><img src="../Authors/Socials/LinkedIn.png" alt="LinkedIn Logo" class="logo_image"></a>
                 <a href="#" target="_blank"><img src="../Authors/Socials/X.png" alt="X Logo" class="logo_image"></a>
                 <a href="#" target="_blank"><img src="../Authors/Socials/Instagram.png" alt="Instagram Logo" class="logo_image"></a>
                 <a href="#" target="_blank"><img src="../Authors/Socials/facebook.png" alt="Facebook Logo" class="logo_image"></a>
