--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <a onclick="setUnderline(this); theory()">Theory<i class="arrow_right"></i></a>
             <a onclick="setUnderline(this); rocket_components()">Rocket Components<i class="arrow_right"></i></a>
             <a onclick="setUnderline(this); engineering_roles()">Aerospace Engineering Roles<i class="arrow_right"></i></a>
-            <a href="#" onclick="setUnderline(this); closeNav()">Company Map</a>
-            <a href="#" onclick="setUnderline(this); closeNav()">Unit Conversions</a>
+            <a href="https://www.aerospacemanual.com/company_map/home.html" onclick="setUnderline(this); closeNav()">Company Map</a>
+            <a href="https://www.aerospacemanual.com/unit_conversions/home.html" onclick="setUnderline(this); closeNav()">Unit Conversions</a>
           </div>
         </div>
         <div id="overlay-column-2" class="overlay-column-2">
