--- a/rocket_components/propulsion/rocket_engines.html
+++ b/rocket_components/propulsion/rocket_engines.html
@@ -11,11 +11,11 @@
     gtag('config', 'G-4BE32D9YSF');
   </script>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,500;1,700&family=Space+Grotesk:wght@500;700">
-  <link rel="stylesheet" type="text/css" href="../nav-bar.css">
-  <link rel="stylesheet" type="text/css" href="../basic-info.css">
+  <link rel="stylesheet" type="text/css" href="../../nav-bar.css">
+  <link rel="stylesheet" type="text/css" href="../../basic-info.css">
   <link rel="stylesheet" type="text/css" href="./rocket_engines.css">
-  <script src="../nav-bar.js"></script>
-  <link rel="icon" type="image/x-icon" href="../Secondary_Logo.png">
+  <script src="../../nav-bar.js"></script>
+  <link rel="icon" type="image/x-icon" href="../../Secondary_Logo.png">
 </head>
   <title>Rocket Engines - The Aerospace Manual</title>
   <body>
@@ -47,7 +47,7 @@
               <div></div>
               <div></div>
           </button>
-          <button onclick="window.location.href='../index.html';" class="company_name">The Aerospace Manual</button>
+          <button onclick="window.location.href='../../index.html';" class="company_name">The Aerospace Manual</button>
         </nav>
 
         <div class="content">
