--- a/company_map/home.html
+++ b/company_map/home.html
@@ -52,14 +52,25 @@
 
         <div class="content">
           
+          <h1>Company Map</h1>
+          <h5>December 28, 2024</h5>
+
           <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
-          <h1>Coming Soon...</h1>
-          <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
+          <h3>Geographic Map</h3>
+          <p>This map highlights the locations of several major aerospace companies. If you notice a company missing
+            or any data that is outdated, please email aerospacemanual@gmail.com to have it included.
+          </p>
+          <div class="video-container">
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1gxQMKRONaa_6IO9xzbraft_3lvgjA6o&ehbc=2E312F" width="840" height="550"></iframe>
+          </div>
+
+          <p class="section_break"></p>
+          <h3>Data Map</h3>
+          <p>Live Data Technologies provides an in depth space and defense industry
+            <a href="https://www.livedatatechnologies.com/industry-map-defense-tech" target="_blank"> tech map</a>.
+            This site contains information about arrivals and departures, where employees attended college and lots of other great information
+            for aerospace companies!
+        </p>
 
         </div> 
 
