--- a/company_map/home.html
+++ b/company_map/home.html
@@ -58,7 +58,7 @@
           <p class="first_section_break"></p>
           <h3>Geographic Map</h3>
           <p>This map highlights the locations of several major aerospace companies. If you notice a company missing
-            or any data that is outdated, please email aerospacemanual@gmail.com to have it included.
+            or any data that is outdated, please email aerospacemanual@gmail.com to have this map updated.
           </p>
           <div class="video-container">
             <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1gxQMKRONaa_6IO9xzbraft_3lvgjA6o&ehbc=2E312F" width="840" height="550"></iframe>
