--- a/engineering_roles/structural_analysis/home.html
+++ b/engineering_roles/structural_analysis/home.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="../../basic-info.css">
   <link rel="stylesheet" type="text/css" href="./home.css">
   <script src="../../nav-bar.js"></script>
+  <script src="./home.js"></script>
   <link rel="icon" type="image/x-icon" href="../../Secondary_Logo.png">
 </head>
   <title>Structural Analysis - The Aerospace Manual</title>
@@ -39,19 +40,49 @@
               <div></div>
               <div></div>
           </button>
-          <button onclick="window.location.href='../../index.html';" class="company_name">The Aerospace Manual</button>
+          <button onclick="window.location.href='../index.html';" class="company_name">The Aerospace Manual</button>
         </nav>
 
         <div class="content">
           
-          <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
-          <h1>Coming Soon...</h1>
-          <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
-          <p class="first_section_break"></p>
+          <h1>Structural Analysis</h1>
+
+          <header>
+            <input type="text" id="searchBar" placeholder="Search articles..." oninput="filterCards()">
+        </header>
+        <div class="card-container" id="cardContainer">
+            <!-- Cards -->
+            <div class="card">
+                <img src="hall_effect.jpg" alt="Article 1 Image" class="card-image">
+                <h3 class="card-title">Article 1</h3>
+                <p class="card-description">A brief description of Article 1. A brief description of Article 1.</p>
+                <a href="article1.html" class="card-link">Read More</a>
+            </div>
+            <div class="card">
+                <img src="hall_effect.jpg" alt="Article 2 Image" class="card-image">
+                <h3 class="card-title">Another Great Article</h3>
+                <p class="card-description">A brief description of Article 2.</p>
+                <a href="article2.html" class="card-link">Read More</a>
+            </div>
+            <div class="card">
+                <img src="hall_effect.jpg" alt="Article 3 Image" class="card-image">
+                <h3 class="card-title">Third Article</h3>
+                <p class="card-description">A brief description of Article 3.</p>
+                <a href="article3.html" class="card-link">Read More</a>
+            </div>
+            <div class="card">
+                <img src="hall_effect.jpg" alt="Article 4 Image" class="card-image">
+                <h3 class="card-title">Fourth Article</h3>
+                <p class="card-description">A brief description of Article 4.</p>
+                <a href="article4.html" class="card-link">Read More</a>
+            </div>
+            <div class="card">
+                <img src="hall_effect.jpg" alt="Article 5 Image" class="card-image">
+                <h3 class="card-title">Fifth Article</h3>
+                <p class="card-description">A brief description of Article 5.</p>
+                <a href="article5.html" class="card-link">Read More</a>
+            </div>
+        </div>
 
         </div> 
 
