--- a/engineering_roles/home.html
+++ b/engineering_roles/home.html
@@ -55,97 +55,97 @@
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 1 Image" class="card-image">
                 <h3 class="card-title">Design Engineering</h3>
-                <p class="card-description">A brief description of Article 1. A brief description of Article 1.</p>
+                <p class="card-description">Creates detailed specifications for systems, components, or vehicles, focusing on functionality, manufacturability, and performance.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/design/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 2 Image" class="card-image">
                 <h3 class="card-title">Dynamics Engineering</h3>
-                <p class="card-description">A brief description of Article 2.</p>
+                <p class="card-description">Analyzes the motion, forces, and vibrations of systems to ensure stability, control, and structural integrity during operation.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/dynamics/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 3 Image" class="card-image">
                 <h3 class="card-title">Electrical Engineering</h3>
-                <p class="card-description">A brief description of Article 3.</p>
+                <p class="card-description">Designs and integrates electrical systems, such as power distribution, wiring, and avionics, to ensure reliable operation.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/electrical/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 4 Image" class="card-image">
                 <h3 class="card-title">Fluid Dynamicist</h3>
-                <p class="card-description">A brief description of Article 4.</p>
+                <p class="card-description">Studies and optimizes the behavior of air and other fluids around vehicles to improve performance, stability, and efficiency.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/fluid_dynamics/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">GNC Engineering</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Develops systems that direct, position, and stabilize aerospace vehicles to ensure precise trajectory and mission success.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/gnc/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Manufacturing Engineering</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Designs and optimizes production processes to efficiently fabricate and assemble components while ensuring quality and compliance.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/manufacturing/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Materials Science & Engineering</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Develops and selects advanced materials to meet the performance, weight, and durability requirements of aerospace systems.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/mse/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Payload Engineering</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Designs, integrates, and tests payloads ensuring they function properly within the constraints of aerospace vehicles.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/payload/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Program Manager</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Oversees the planning, coordination, and execution of projects, ensuring they meet technical, budgetary, and schedule requirements.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/program_manager/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Propulsion Engineering</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Designs, tests, and optimizes engines and propulsion systems to ensure efficient and reliable performance for aerospace vehicles.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/propulsion/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Quality Control</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Develops & implements processes to ensure that components and systems meet safety, performance, and regulatory standards.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/quality/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Software Engineering</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Develops and maintains software systems for aerospace applications, including avionics, control systems, and simulations.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/software/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Structural Analysis</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Evaluates and ensures the strength, stability, and durability of aerospace components and structures under various loads and conditions.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/structural_analysis/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Systems Engineering</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Coordinates and integrates various subsystems within projects, ensuring they work together effectively.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/systems/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Test Engineering</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Designs and conducts tests to verify the performance, safety, and reliability of components and systems.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/test/home.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <img src="./photos/link_template.jpeg" alt="Article 5 Image" class="card-image">
                 <h3 class="card-title">Thermal Analysis</h3>
-                <p class="card-description">A brief description of Article 5.</p>
+                <p class="card-description">Evaluates and optimizes the thermal performance of systems, ensuring they can withstand and operate efficiently in temperature extremes.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/thermal_analysis/home.html" class="card-link">Read More</a>
             </div>
         </div>
