--- a/engineering_roles/home.html
+++ b/engineering_roles/home.html
@@ -72,7 +72,7 @@
             </div>
             <div class="card">
                 <img src="./photos/fluid_dynamics.jpg" alt="Computational Fluid Dynamics" class="card-image">
-                <h3 class="card-title">Fluid Dynamicist</h3>
+                <h3 class="card-title">Fluid Dynamics</h3>
                 <p class="card-description">Studies and optimizes the behavior of air and other fluids around vehicles to improve performance, stability, and efficiency.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/fluid_dynamics/home.html" class="card-link">Read More</a>
             </div>
@@ -102,7 +102,7 @@
             </div>
             <div class="card">
                 <img src="./photos/program_manager.jpg" alt="Program Manager" class="card-image">
-                <h3 class="card-title">Program Manager</h3>
+                <h3 class="card-title">Program Management</h3>
                 <p class="card-description">Oversees the planning, coordination, and execution of projects, ensuring they meet technical, budgetary, and schedule requirements.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/program_manager/home.html" class="card-link">Read More</a>
             </div>
@@ -114,7 +114,7 @@
             </div>
             <div class="card">
                 <img src="./photos/quality.jpg" alt="Quality Control Engineer" class="card-image">
-                <h3 class="card-title">Quality Control</h3>
+                <h3 class="card-title">Quality Engineering</h3>
                 <p class="card-description">Develops & implements processes to ensure that components and systems meet safety, performance, and regulatory standards.</p>
                 <a href="https://www.aerospacemanual.com/engineering_roles/quality/home.html" class="card-link">Read More</a>
             </div>
