--- a/engineering_roles/quality/home.html
+++ b/engineering_roles/quality/home.html
@@ -17,7 +17,7 @@
   <script src="../../nav-bar.js"></script>
   <link rel="icon" type="image/x-icon" href="../../Secondary_Logo.png">
 </head>
-  <title>Quality Control - The Aerospace Manual</title>
+  <title>Quality Engineering - The Aerospace Manual</title>
   <body onload="set_base_nav_menu()">
 
     <div id="myNav" class="overlay">
