--- a/theory/role_specific/home.html
+++ b/theory/role_specific/home.html
@@ -54,37 +54,37 @@
             <!-- Cards -->
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/role_specific/dynamics/home.html" class="ovr-card-link">
-                    <img src="./photos/dynamics.jpg" alt="Dynamics" class="card-image">
+                    <img src="../../engineering_roles/photos/dynamics.jpg" alt="Dynamics" class="card-image">
                     <h3 class="card-title">Dynamics</h3>
                 </a>
             </div>
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/role_specific/fluids/home.html" class="ovr-card-link">
-                    <img src="./photos/fluid_dynamics.jpg" alt="Fluid Dynamics" class="card-image">
+                    <img src="../../engineering_roles/photos/fluid_dynamics.jpg" alt="Fluid Dynamics" class="card-image">
                     <h3 class="card-title">Fluid Dynamics</h3>
                 </a>
             </div>
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/role_specific/mse/home.html" class="ovr-card-link">
-                    <img src="./photos/mse.jpg" alt="Material Science & Engineering" class="card-image">
+                    <img src="../../engineering_roles/photos/mse.jpg" alt="Material Science & Engineering" class="card-image">
                     <h3 class="card-title">Material Science & Engineering</h3>
                 </a>
             </div>
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/role_specific/propulsion/home.html" class="ovr-card-link">
-                    <img src="./photos/propulsion.jpg" alt="Propulsion" class="card-image">
+                    <img src="../../engineering_roles/photos/propulsion.jpg" alt="Propulsion" class="card-image">
                     <h3 class="card-title">Propulsion</h3>
                 </a>
             </div>
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/role_specific/structural_analysis/home.html" class="ovr-card-link">
-                    <img src="./photos/structural_analysis.jpg" alt="Structural Analysis" class="card-image">
+                    <img src="../../engineering_roles/photos/structural_analysis.jpg" alt="Structural Analysis" class="card-image">
                     <h3 class="card-title">Structural Analysis</h3>
                 </a>
             </div>
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/role_specific/thermal_analysis/home.html" class="ovr-card-link">
-                    <img src="./photos/thermal.jpg" alt="Thermal Analysis" class="card-image">
+                    <img src="../../engineering_roles/photos/thermal.jpg" alt="Thermal Analysis" class="card-image">
                     <h3 class="card-title">Thermal Analysis</h3>
                 </a>
             </div>
