--- a/theory/home.html
+++ b/theory/home.html
@@ -66,7 +66,7 @@
             </div>
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/statics/home.html" class="ovr-card-link">
-                    <img src="./photos/statics.png" alt="Statics" class="card-image">
+                    <img src="./photos/statics.jpg" alt="Statics" class="card-image">
                     <h3 class="card-title">Statics</h3>
                 </a>
             </div>
