--- a/theory/role_specific/home.html
+++ b/theory/role_specific/home.html
@@ -55,7 +55,7 @@
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/role_specific/dynamics/home.html" class="ovr-card-link">
                     <img src="../../engineering_roles/photos/dynamics.jpg" alt="Dynamics" class="card-image">
-                    <h3 class="card-title">Dynamics</h3>
+                    <h3 class="card-title">Dynamics Engineering</h3>
                 </a>
             </div>
             <div class="card">
@@ -73,7 +73,7 @@
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/role_specific/propulsion/home.html" class="ovr-card-link">
                     <img src="../../engineering_roles/photos/propulsion.jpg" alt="Propulsion" class="card-image">
-                    <h3 class="card-title">Propulsion</h3>
+                    <h3 class="card-title">Propulsion Engineering</h3>
                 </a>
             </div>
             <div class="card">
