--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="content">
             <div class="left">
                 <h1>The Aerospace Manual</h1>
-                <h3>It <em>is</em> rocket science,<br> but let's make it easy</h3>
+                <h3>It <em>is</em> rocket science,<br> but let's make it simple</h3>
             </div>
             <div class="right">
                 <img src="shuttle_launch.jpg" alt="Rocket Launch">
