--- a/theory/home.html
+++ b/theory/home.html
@@ -77,6 +77,12 @@
                 </a>
             </div>
             <div class="card">
+                <a href="https://www.aerospacemanual.com/theory/mse/home.html" class="ovr-card-link">
+                    <img src="../engineering_roles/photos/mse.jpg" alt="Materials Science" class="card-image">
+                    <h3 class="card-title">Basic Materials Science</h3>
+                </a>
+            </div>
+            <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/mechanics/home.html" class="ovr-card-link">
                     <img src="./photos/mechanics.jpeg" alt="Mechanics" class="card-image">
                     <h3 class="card-title">Mechanics of Materials</h3>
@@ -90,7 +96,7 @@
             </div>
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/fluids/home.html" class="ovr-card-link">
-                    <img src="./photos/fluids.jpg" alt="Fluids" class="card-image">
+                    <img src="./photos/fluids-2.jpg" alt="Fluids" class="card-image">
                     <h3 class="card-title">Fluid Dynamics</h3>
                 </a>
             </div>
@@ -108,7 +114,7 @@
             </div>
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/orbital/home.html" class="ovr-card-link">
-                    <img src="./photos/orbital.jpeg" alt="Orbital Mechanics" class="card-image">
+                    <img src="./photos/orbital.jpg" alt="Orbital Mechanics" class="card-image">
                     <h3 class="card-title">Orbital Mechanics</h3>
                 </a>
             </div>
