--- a/theory/home.html
+++ b/theory/home.html
@@ -79,7 +79,7 @@
             <div class="card">
                 <a href="https://www.aerospacemanual.com/theory/mse/home.html" class="ovr-card-link">
                     <img src="../engineering_roles/photos/mse.jpg" alt="Materials Science" class="card-image">
-                    <h3 class="card-title">Basic Materials Science</h3>
+                    <h3 class="card-title">Materials Science</h3>
                 </a>
             </div>
             <div class="card">
