--- a/aerospace_history/home.html
+++ b/aerospace_history/home.html
@@ -53,19 +53,19 @@
         <div class="card-container" id="cardContainer">
             <!-- Cards -->
             <div class="card">
-                <a href="https://www.aerospacemanual.com/theory/math/home.html" class="ovr-card-link">
+                <a href="https://www.aerospacemanual.com/aerospace_history/united_states/home.html" class="ovr-card-link">
                     <img src="./united_states/photos/mercury_7.jpg" alt="US History" class="card-image">
                     <h3 class="card-title">US History</h3>
                 </a>
             </div>
             <div class="card">
-                <a href="https://www.aerospacemanual.com/theory/physics/home.html" class="ovr-card-link">
+                <a href="https://www.aerospacemanual.com/aerospace_history/russia/home.html" class="ovr-card-link">
                     <img src="./russia/photos/yuri.jpg" alt="Russia History" class="card-image">
                     <h3 class="card-title">Russia History</h3>
                 </a>
             </div>
             <div class="card">
-                <a href="https://www.aerospacemanual.com/theory/statics/home.html" class="ovr-card-link">
+                <a href="https://www.aerospacemanual.com/aerospace_history/other/home.html" class="ovr-card-link">
                     <img src="./photos/v2_rocket.jpg" alt="Other History" class="card-image">
                     <h3 class="card-title">Other</h3>
                 </a>
