--- a/engineering_roles/structural_analysis/home.html
+++ b/engineering_roles/structural_analysis/home.html
@@ -53,34 +53,10 @@
         <div class="card-container" id="cardContainer">
             <!-- Cards -->
             <div class="card">
-              <a href="article1.html" class="ovr-card-link">
-                <img src="hall_effect.jpg" alt="Article 1 Image" class="card-image">
-                <h3 class="card-title">Article 1</h3>
-              </a>
-            </div>
-            <div class="card">
-              <a href="article2.html" class="ovr-card-link">
-                <img src="hall_effect.jpg" alt="Article 2 Image" class="card-image">
-                <h3 class="card-title">Another Great Article</h3>
-              </a>
-            </div>
-            <div class="card">
-              <a href="article3.html" class="ovr-card-link">
-                <img src="hall_effect.jpg" alt="Article 3 Image" class="card-image">
-                <h3 class="card-title">Third Article</h3>
-              </a>
-            </div>
-            <div class="card">
-              <a href="article4.html" class="ovr-card-link">
-                <img src="hall_effect.jpg" alt="Article 4 Image" class="card-image">
-                <h3 class="card-title">Fourth Article</h3>
-              </a>
-            </div>
-            <div class="card">
-              <a href="article5.html" class="ovr-card-link">
-                <img src="hall_effect.jpg" alt="Article 5 Image" class="card-image">
-                <h3 class="card-title">Fifth Article</h3>
-              </a>
+                <a href="https://www.aerospacemanual.com/engineering_roles/structural_analysis/overview.html" class="ovr-card-link">
+                    <img src="../photos/structural_analysis.jpg" alt="Structural Analysis" class="card-image">
+                    <h3 class="card-title">Overview</h3>
+                </a>
             </div>
         </div>
 
