--- a/aerospace_history/home.html
+++ b/aerospace_history/home.html
@@ -33,6 +33,7 @@
       </div>
     </div>
 
+    <main>
     <div class="container">
         <nav class="navbar">
           <button onclick="openNav()" class="nav_bar_button">
@@ -73,10 +74,10 @@
         </div>
 
         </div> 
-
-        <footer>
-            <p class="p2">Questions? Email: aerospacemanual@gmail.com</p>
-        </footer>
-    </div>
+      </div>
+    </main>
+    <footer>
+      <p class="p2">Questions? Email: aerospacemanual@gmail.com</p>
+    </footer>
 </body>
 </html>
