--- a/aerospace_history/united_states/home.html
+++ b/aerospace_history/united_states/home.html
@@ -33,6 +33,7 @@
       </div>
     </div>
 
+    <main>
     <div class="container">
         <nav class="navbar">
           <button onclick="openNav()" class="nav_bar_button">
@@ -80,9 +81,10 @@
 
         </div> 
 
-        <footer>
-            <p class="p2">Questions? Email: aerospacemanual@gmail.com</p>
-        </footer>
     </div>
+    </main>
+    <footer>
+      <p class="p2">Questions? Email: aerospacemanual@gmail.com</p>
+  </footer>
 </body>
 </html>
