--- a/company_map/home.html
+++ b/company_map/home.html
@@ -32,6 +32,7 @@
       </div>
     </div>
 
+    <main>
     <div class="container">
         <nav class="navbar">
           <button onclick="openNav()" class="nav_bar_button">
@@ -66,9 +67,10 @@
 
         </div> 
 
-        <footer>
-            <p class="p2">Questions? Email: aerospacemanual@gmail.com</p>
-        </footer>
     </div>
+    </main>
+    <footer>
+      <p class="p2">Questions? Email: aerospacemanual@gmail.com</p>
+  </footer>
 </body>
 </html>
