--- a/engineering_roles/electrical/home.html
+++ b/engineering_roles/electrical/home.html
@@ -33,6 +33,7 @@
       </div>
     </div>
 
+    <main>
     <div class="container">
         <nav class="navbar">
           <button onclick="openNav()" class="nav_bar_button">
@@ -61,10 +62,11 @@
         </div>
 
         </div> 
-
-        <footer>
-            <p class="p2">Questions? Email: aerospacemanual@gmail.com</p>
-        </footer>
+        
     </div>
+    </main>
+    <footer>
+      <p class="p2">Questions? Email: aerospacemanual@gmail.com</p>
+  </footer>
 </body>
 </html>
